--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-    <a href="https://github.com/brobin/hacker-bootstrap"><img style="position: absolute; top: 0; left: 0; border: 0;z-index:1001;" src="img/fork.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/Bachittarjeet/Hacker-Bootstrap-Template/"><img style="position: absolute; top: 0; left: 0; border: 0;z-index:1001;" src="img/fork.png" alt="Fork me on GitHub"></a>
 
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
@@ -71,8 +71,8 @@
             <p>A Bootstrap theme for 31337 H4X0RS. Inspired by the classic green on black terminal style, this bootstrap theme will make your website 1337.</p>
             <p>To hack around with the source or contribute, check out the project on Github</p>
             <p>
-                <a class="btn btn-lg btn-primary" href="//github.com/brobin/hacker-bootstrap/" role="button">View on Github »</a>
-                <a class="btn btn-primary" href="//github.com/brobin/hacker-bootstrap/" id="stars"></a>
+                <a class="btn btn-lg btn-primary" href="//github.com/Bachittarjeet/Hacker-Bootstrap-Template/" role="button">View on Github »</a>
+                <a class="btn btn-primary" href="//github.com/Bachittarjeet/Hacker-Bootstrap-Template/" id="stars"></a>
             </p>
         </div>
 
@@ -660,7 +660,7 @@
 
         <div class="row tall-row">
             <div class="col-md-12">
-                <p>Created by <a href="//brobin.me">Bachittarjeet</a>. &copy; 2019</p>
+                <p>Created by <a href="//bachittarjeet.github.io">Bachittarjeet</a>. &copy; 2019</p>
             </div>
         </div>
 
@@ -672,7 +672,7 @@
     <!-- Github stars script -->
     <script>
     $(document).ready(function(){
-        $.getJSON("https://api.github.com/repos/brobin/hacker-bootstrap", function(data){
+        $.getJSON("https://api.github.com/repos/Bachittarjeet/Hacker-Bootstrap-Template/", function(data){
             var stars = data['stargazers_count'];
             $("#stars").text(stars + " stars");
         });
